# python-starter

./: .env.example  .gitignore  README.md  conda.yml  prompt.md  pyproject.toml  renovate.json
.github/workflows/: quality.yml
ai-assistants/: .cursor-rules  01-main-directives.md  02-testing-rules.md  03-refactoring-rules.md  04-general-coding-rules.md
docs/: 01_core_concepts.ipynb  02_advanced_patterns.ipynb  02_functional_patterns.ipynb  03_advanced_concepts.ipynb  04_architecture_and_design.ipynb  05_data_structures.ipynb
src/: py.typed
src/core/: config.py  logging_config.py  models.py  protocols.py  services.py
src/entrypoints/: api.py  cli.py
tests/: conftest.py
tests/core/: test_logging_config.py  test_models.py  test_services.py
tests/entrypoints/: test_api.py  test_cli.py
